<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="15dp"
    tools:context="onboard.ecobee.com.tasklist.taskdetail.TaskDetailActivity"
    tools:showIn="@layout/activity_task_detail">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_task_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingTop="5dp"
        android:text="@string/task_title" />

    <EditText
        android:id="@+id/et_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_task_title_here"
        android:paddingTop="5dp" />

    <TextView
        android:id="@+id/tv_task_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/task_description" />

    <EditText
        android:id="@+id/et_task_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_task_description_here"
        android:paddingTop="5dp" />

    <TextView
        android:id="@+id/tv_task_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/str_due_date"/>

    <Button
        android:id="@+id/btn_set_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_set_date"
        android:paddingTop="8dp"></Button>

    <Button
        android:id="@+id/btn_create_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="@string/create_task" />

</LinearLayout>
</ScrollView>